--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
-    /* Base */
+    /* — Base — */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f5f7fa;
       color: #333;
       line-height: 1.6;
     }
-    a.navbar-brand:hover {
+    .navbar-brand:hover {
       color: #0d6efd !important;
     }
 
-    /* Hero */
+    /* — Hero — */
     .hero {
       background-color: #d9e3f0;
       text-align: center;
@@ -33,7 +33,7 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
-    /* Section titles */
+    /* — Section Titles — */
     .section-title {
       font-size: 2rem;
       font-weight: 600;
@@ -41,7 +41,7 @@
       color: #2c3e50;
     }
 
-    /* Work entries */
+    /* — Work Entries — */
     .work-entry {
       border-left: 4px solid #0d6efd;
       padding-left: 1rem;
@@ -54,7 +54,7 @@
       padding-left: 1.2rem;
     }
 
-    /* Certificates & badges */
+    /* — Certificates & Badges — */
     .cert-img {
       max-height: 250px;
       object-fit: cover;
@@ -116,68 +116,36 @@
   <!-- Work Experience -->
   <section id="experience" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Work Experience</h2>
-
-    <div class="work-entry">
-      <h5>Engineer I – Techserv Engineering and Consulting, TX (2024–Present)</h5>
-      <ul>
-        <li>Designed utility pole configurations and created PE-ready field packages.</li>
-        <li>Reviewed stress reports using SPIDA and ensured NESC compliance.</li>
-        <li>Generated cost estimates and collaborated with field teams for accuracy.</li>
-      </ul>
-    </div>
-
-    <div class="work-entry">
-      <h5>Engineering Intern – InergyX Building Solutions, TX (2023–2024)</h5>
-      <ul>
-        <li>Conducted blower door and duct leakage tests under PE supervision.</li>
-        <li>Used HVAC software and drones to identify and improve efficiency.</li>
-        <li>Participated in project management and client communication.</li>
-        <li>Contributed to internal innovation projects for energy auditing.</li>
-      </ul>
-    </div>
-
-    <div class="work-entry">
-      <h5>Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu (May–Aug 2021)</h5>
-      <ul>
-        <li>Designed a 5 tons/hr Plastic Cutter and Shredder for urban recycling initiatives.</li>
-        <li>Led remote simulations for diverse BPO-based engineering projects.</li>
-        <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
-      </ul>
-    </div>
-
-    <div class="work-entry">
-      <h5>Mechanical Design Intern – Surya Nepal Pvt. Ltd, Simara (Sep–Nov 2019)</h5>
-      <ul>
-        <li>Improved automated packaging efficiency by 6% via geometry optimization.</li>
-        <li>Engineered a cost-effective hydraulic press for tobacco cake quality control.</li>
-      </ul>
-    </div>
+    <!-- your work entries here -->
   </section>
 
   <!-- Certificates -->
   <section id="certificates" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Certificates</h2>
     <div class="row g-4">
-      <div class="col-md-3 text-center">
+      <div class="col-sm-6 col-md-3 text-center">
         <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg"
-             alt="Semiconductor Certificate"
-             class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
+             alt="Semiconductor Packaging Manufacturing"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
       </div>
-      <div class="col-md-3 text-center">
-        <img src="images/EIT.jpg" alt="EIT Certificate"
-             class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
+      <div class="col-sm-6 col-md-3 text-center">
+        <img src="images/EIT.jpg"
+             alt="Engineer in Training"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
       </div>
-      <div class="col-md-3 text-center">
-        <img src="images/Courseera MATLAB.jpg" alt="MATLAB Certificate"
-             class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
+      <div class="col-sm-6 col-md-3 text-center">
+        <img src="images/Courseera MATLAB.jpg"
+             alt="Introduction to Programming with MATLAB"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
       </div>
-      <div class="col-md-3 text-center">
-        <img src="images/openfoam.jpg" alt="OpenFOAM Certificate"
-             class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
+      <div class="col-sm-6 col-md-3 text-center">
+        <img src="images/openfoam.jpg"
+             alt="CFD Workshop on OpenFOAM"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
       </div>
     </div>
   </section>
@@ -186,10 +154,10 @@
   <section id="digital-credentials" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Digital Credentials</h2>
     <p class="mb-4">
-      I’ve received three digital credentials from UT Tyler. Click any badge to verify below:
+      I’ve received three digital credentials from UT Tyler. Click any badge to verify:
     </p>
     <div class="row g-4 justify-content-center">
-      <!-- MSME Degree -->
+      <!-- Shared Validity.id link -->
       <div class="col-12 col-sm-6 col-md-4 text-center">
         <img src="images/badges/msme-degree-badge.png"
              alt="MSME Degree Badge"
@@ -204,7 +172,6 @@
           </a>
         </p>
       </div>
-      <!-- Thermal-Fluid Systems -->
       <div class="col-12 col-sm-6 col-md-4 text-center">
         <img src="images/badges/thermal-fluid-badge.png"
              alt="Thermal-Fluid Systems Badge"
@@ -219,7 +186,6 @@
           </a>
         </p>
       </div>
-      <!-- Systems & Controls -->
       <div class="col-12 col-sm-6 col-md-4 text-center">
         <img src="images/badges/systems-control-badge.png"
              alt="Systems & Controls Badge"
@@ -260,8 +226,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+  <script>AOS.init();</script>
 </body>
 </html>
