--- a/indexcopy.html
+++ b/indexcopy.html
@@ -175,6 +175,58 @@
       </div>
     </div>
   </section>
+  <!-- Digital Credentials -->
+  <section id="digital-credentials" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Digital Credentials</h2>
+    <p class="mb-4">
+      I’ve received three digital credentials from UT Tyler. Click any badge to verify:
+    </p>
+    <div class="row g-4 justify-content-center">
+      <!-- Shared Validity.id link -->
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/msme-degree-badge.png"
+             alt="MSME Degree Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Master of Science in Mechanical Engineering</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/thermal-fluid-badge.png"
+             alt="Thermal-Fluid Systems Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Graduate Certificate: Thermal-Fluid Systems</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/systems-control-badge.png"
+             alt="Systems & Controls Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Graduate Certificate: Systems &amp; Controls</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
+    </div>
+  </section>
 
   <!-- Resume -->
   <section id="resume" class="container py-4" data-aos="fade-up">
