--- a/index.html
+++ b/index.html
@@ -154,27 +154,39 @@
   </section>
 
   <!-- Certificates -->
-  <section id="certificates" class="container py-4" data-aos="fade-up">
-    <h2 class="section-title">Certificates</h2>
-    <div class="row g-4">
-      <div class="col-md-4 text-center">
-        <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg" alt="Semiconductor" class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="images/EIT.jpg" alt="EIT Certificate" class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="images/Courseera MATLAB.jpg" alt="MATLAB Certificate" class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="images/openfoam.jpg" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
-        <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
-      </div>
+<section id="certificates" class="container py-4" data-aos="fade-up">
+  <h2 class="section-title">Certificates</h2>
+  <div class="row g-4">
+    <div class="col-sm-6 col-md-3 text-center">
+      <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg"
+           alt="Semiconductor Packaging Manufacturing"
+           class="img-fluid rounded cert-img shadow mb-2">
+      <p><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
     </div>
-  </section>
+
+    <div class="col-sm-6 col-md-3 text-center">
+      <img src="images/EIT.jpg"
+           alt="Engineer in Training (EIT)"
+           class="img-fluid rounded cert-img shadow mb-2">
+      <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
+    </div>
+
+    <div class="col-sm-6 col-md-3 text-center">
+      <img src="images/Courseera MATLAB.jpg"
+           alt="Introduction to Programming with MATLAB"
+           class="img-fluid rounded cert-img shadow mb-2">
+      <p><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
+    </div>
+
+    <div class="col-sm-6 col-md-3 text-center">
+      <img src="images/openfoam.jpg"
+           alt="CFD Workshop on OpenFOAM"
+           class="img-fluid rounded cert-img shadow mb-2">
+      <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
+    </div>
+  </div>
+</section>
+
   <!-- Digital Credentials -->
   <section id="digital-credentials" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Digital Credentials</h2>
