--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       padding-left: 1.2rem;
     }
 
-    /* — Certificates Grid (3 across, wraps 4th below) — */
+    /* — Certificates Grid: 3 across, 4th wraps below — */
     #certificates .cert-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -168,7 +168,7 @@
     <div class="work-entry">
       <h5>Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu (May–Aug 2021)</h5>
       <ul>
-        <li>Designed a 5 tons/hr plastic cutter & shredder for urban recycling initiatives.</li>
+        <li>Designed a 5 tons/hr plastic cutter &amp; shredder for urban recycling initiatives.</li>
         <li>Led remote simulations for diverse BPO-based engineering projects.</li>
         <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
       </ul>
@@ -213,7 +213,72 @@
     </div>
   </section>
 
-  <!-- (rest of page omitted for brevity) -->
+  <!-- Digital Credentials -->
+  <section id="digital-credentials" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Digital Credentials</h2>
+    <p class="mb-4">
+      I’ve received three digital credentials from UT Tyler. Click any badge to verify:
+    </p>
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/msme-degree-badge.png"
+             alt="MSME Degree Badge"
+             class="img-fluid rounded cert-img mb-2">
+        <p>
+          <strong>Master of Science in Mechanical Engineering</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">Verify Credential &rarr;</a>
+        </p>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/thermal-fluid-badge.png"
+             alt="Thermal-Fluid Systems Badge"
+             class="img-fluid rounded cert-img mb-2">
+        <p>
+          <strong>Graduate Certificate: Thermal-Fluid Systems</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">Verify Credential &rarr;</a>
+        </p>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/systems-control-badge.png"
+             alt="Systems &amp; Controls Badge"
+             class="img-fluid rounded cert-img mb-2">
+        <p>
+          <strong>Graduate Certificate: Systems &amp; Controls</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024"
+             target="_blank">Verify Credential &rarr;</a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Resume -->
+  <section id="resume" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Resume</h2>
+    <a href="Resume_Amrit Thapa.pdf" download class="btn btn-outline-primary">
+      Download My Resume
+    </a>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Contact</h2>
+    <p>Email: <a href="mailto:athapa.2023@gmail.com">athapa.2023@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/amrit-thapa" target="_blank">linkedin.com/in/amrit-thapa</a></p>
+    <p>Phone: <a href="tel:+15037030978">(503) 703-0978</a></p>
+  </section>
+
+  <footer class="bg-light text-center py-3 mt-4 border-top">
+    &copy; 2025 Amrit Thapa. All rights reserved.
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
