--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="images/openfoam.jpg" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
+        <img src="images/openfoam.png" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
         <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
               </div>
       <div class="col-md-4 text-center">
