Update index and project files

--- a/Projects/WindTunnel.html
+++ b/Projects/WindTunnel.html
@@ -99,6 +99,7 @@
   <section class="project-hero" data-aos="fade-up">
     <h1>Closed Circuit Subsonic Wind Tunnel</h1>
     <p class="lead">Design & Analysis of a Low-Speed Wind Tunnel with Axial Fan</p>
+    Team: Amrit Thapa, Basant Regmi, Siddhartha Shakya, Suman Shah
   </section>
 
   <!-- Overview -->
