--- a/Projects/EvaporativeCoolerAC.html
+++ b/Projects/EvaporativeCoolerAC.html
@@ -135,6 +135,8 @@
   <!-- Hero -->
   <section class="project-hero" data-aos="fade-up">
     <h1>Temperature and Humidity Control in an<br>Evaporative Cooling AC System</h1>
+    <p style="font-size:1rem; color:#333;">
+      Team: Amrit Thapa,Gideon kwabena Nyarko, Giovanni Josue Cerrato
   </section>
 
   <!-- Content -->
