open foam image update

--- a/index.html
+++ b/index.html
@@ -213,16 +213,16 @@
         <p><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
       </div>
       <div class="cert-item">
-        <img src="images/EIT.jpg" alt="Engineer in Training (EIT)" class="cert-img">
-        <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
+        <img src="images/openfoam.png" alt="CFD Workshop on OpenFOAM" class="cert-img">
+        <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
       </div>
       <div class="cert-item">
         <img src="images/Courseera MATLAB.jpg" alt="Introduction to Programming with MATLAB" class="cert-img">
         <p><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
       </div>
       <div class="cert-item">
-        <img src="images/openfoam.jpg" alt="CFD Workshop on OpenFOAM" class="cert-img">
-        <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
+        <img src="images/EIT.jpg" alt="Engineer in Training (EIT)" class="cert-img">
+        <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>    
       </div>
     </div>
   </section>
