profile photo update

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Hero Section -->
   <section id="top" class="hero" data-aos="fade-up">
-    <img src="images/Profile.JPG" alt="Profile Picture">
+    <img src="images/Profile.JPG" alt="Profile">
     <h1 class="mb-2">Amrit Thapa</h1>
     <p class="lead">Mechanical Engineer | CFD &amp; FEA | Thermal &amp; Utility Systems</p>
   </section>
