--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Hero Section -->
   <section id="top" class="hero" data-aos="fade-up">
-    <img src="images/Profile.JPG" alt="Profile">
+     <img src="images/Profile.JPEG" alt="Profile">
     <h1 class="mb-2">Amrit Thapa</h1>
     <p class="lead">Mechanical Engineer | CFD &amp; FEA | Thermal &amp; Utility Systems</p>
   </section>
@@ -222,9 +222,22 @@
       </div>
       <div class="cert-item">
         <img src="images/EIT.jpg" alt="Engineer in Training (EIT)" class="cert-img">
-        <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>    
+        <p><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
       </div>
     </div>
+  </section>
+
+  <!-- Certificate Modal -->
+  <div class="modal fade" id="certModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content border-0 bg-transparent">
+        <div class="modal-body p-0">
+          <img src="" id="certModalImg" class="img-fluid w-100" alt="Certificate">
+        </div>
+      </div>
+    </div>
+  </div>
+
   </section>
 
   <!-- Digital Credentials -->
